@@ -1,4 +1,3 @@
- 
 <h1>{$page->title}</h1>
 
 <p>The following items are currently being download at <a href="{$sabserver|escape:"htmlall"}">{$sabserver|escape:"htmlall"}</a>. {if $page->site->sabintegrationtype == 2}Edit queue settings in <a href="{$smarty.const.WWW_TOP}/profileedit">your profile</a>.{/if}</p>
@@ -28,7 +27,6 @@ function getQueue()
 	});
 }
 
-getQueue();
-
 </script>
 {/literal}
+<body onLoad="getQueue();">
